# AquaScript

./: .gitignore  CLEANUP_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION.md  DEVELOPMENT_PLAN.md  DICT_FEATURES.md  FEATURES_DEMO.md  NEW_SYNTAX_README.md  PERFORMANCE_ROADMAP.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  SYNTAX_REFERENCE.md  build.py  calculator.aqua  enhanced_aquac.py  math_library.aqua  number_game.aqua  project_manager.aqua  showcase.aqua  test_all_examples.py  test_examples_only.py  test_import_syntax.py  test_in_operator.aqua  test_simple_import.aqua
benchmark_tests/: fibonacci.aqua  function_calls.aqua  loop_test.aqua  string_concat.aqua
benchmarks/: performance_test.py
compiler/: aquac.py  codegen.py  lexer.py  parser.py
editor/: README.md  app.py  desktop_app.py  loading.html  main.js  package-lock.json  package.json  requirements.txt  启动AquaScript编辑器.bat  启动AquaScript编辑器.ps1
examples/: advanced_features.aqua  async_programming.aqua  concurrency_parallelism.aqua  data_structures.aqua  data_structures_simple.aqua  decorators_metaprogramming.aqua  fibonacci.aqua  hello.aqua  new_syntax_demo.aqua  pattern_matching.aqua  simple_game_basic.aqua  simple_games.aqua  simple_games_fixed.aqua  string_basic.aqua  string_processing.aqua  string_processing_simple.aqua  test_basic.aqua  type_system_generics.aqua
stdlib/: math.aqua
test_files/: README.md  basic_test.aqua  elif_test.aqua  minimal_elif_test.aqua  simple_elif_test.aqua  simple_task_manager.aqua  (+3 more)
vm/rust_vm/: Cargo.toml
vm/rust_vm/src/: lib.rs  vm.rs
(+58 files in other folders)
