[package]
name = "aqua-vm"
version = "0.1.0"
edition = "2021"
authors = ["AquaScript Team"]
description = "High-performance AquaScript Virtual Machine written in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rustc-hash = "1.1"  # 更快的HashMap实现

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]
optional = true

[features]
default = []
python-bindings = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "aqua-vm"
path = "src/main.rs"

[lib]
name = "aqua_vm"
crate-type = ["cdylib", "rlib"]